--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-lodash": "^3.3.2",
+    "bitly": "^6.0.8",
     "browser-sync": "^2.24.5",
     "cached-request": "^1.1.2",
     "cliui": "^4.1.0",
     "copy-paste": "^1.3.0",
     "d3-dsv": "^1.0.8",
+    "date-fns": "^2.0.0-alpha.18",
     "decache": "^4.4.0",
     "del": "^3.0.0",
     "dotenv": "^5.0.1",
-    "google-url": "0.0.4",
     "googleapis": "^31.0.2",
     "gulp": "^4.0.0",
     "gulp-a11y": "^0.1.2",
