--- a/package.json
+++ b/package.json
@@ -68,8 +68,11 @@
     "indian-ocean": "^3.0.2",
     "jest-cli": "^23.4.1",
     "moment": "^2.21.0",
+    "mysql": "^2.16.0",
     "openurl": "^1.1.1",
+    "parse-address": "^1.1.0",
     "parse-full-name": "^1.2.3",
+    "readline-sync": "^1.4.9",
     "request": "^2.85.0",
     "run-sequence": "^1.2.2",
     "sander": "^0.6.0",
